Kubernetes-notes/12.Ingress/06.CookiesAffinity/withoutcookies/Deploy-default.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nocookies-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nocookies
  template:
    metadata:
      labels:
        app: nocookies
    spec:
      containers:
      - name: nocookies-container
        image: 230882/affinity-demo:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nocookies-service
  annotations:
    cloud.google.com/backend-config: '{"default": "my-backend-nocookies"}'
spec:
  type: NodePort
  selector:
    app: nocookies
  ports:
  - port: 80
    targetPort: 80
---
